template-with-private.yaml
AWSTemplateFormatVersion: '2010-09-09'
Transform: AWS::Serverless-2016-10-31
Description: >
  frab-api

  SAM for frab-api

# More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
Globals:
  Function:
    Timeout: 15
Parameters:
  MultiAZSupport:
    Type: String
    Default: "true"    
  ElastiCacheClusterType:
    Type: String
    Default: "cache.m4.medium" #cache.m4.medium or cache.t3.medium or cache.r5.large
  ElastiCacheNodes:
    Type: Number
    Default: 2 #2 for Prod
  DistanceComparisonValue:
    Type: Number
    Default: 2
  DistanceComparisonUnit:
    Type: String
    Default: 'm'
  VpcName:
    Type: String
    Default: "frab-api-vpc"
  VpcCidrBlock:
    Type: String
    Default: "10.100.0.0/16"
  PrivateSubnet1CIDR:
    Description: "CIDR block for Private Subnet 1"
    Type: String
    Default: "10.100.0.0/24"
  PrivateSubnet2CIDR:
    Description: "CIDR block for Private Subnet 2"
    Type: String
    Default: "10.100.1.0/24"
  PublicSubnet1CIDR:
    Description: "CIDR block for Public Subnet"
    Type: String
    Default: "10.100.64.0/24"
  DefaultRegion: 
    Type: String
    Default: "ap-southeast-1"
  SearchRadiusValue:
    Type: Number
    Default: 3
  SearchRadiusUnits:
    Type: String
    Default: 'km' #'mi', 'km', 'm', 'ft'
  RidesAcceptableCount:
    Type: Number
    Default: 10
  RedisRidesTTL:
    Type: Number
    Default: 1800 #Seconds
Resources:
  PrivateLambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref mainVPC
      GroupDescription: "Allows access over 443 to a single VPC Security Group"
      SecurityGroupIngress:
        -
          IpProtocol: "tcp"
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !Ref BastionSecurityGroup
  DistanceDriverRiderFunction:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: distance_driver_rider/
      Handler: app.lambda_handler
      Runtime: python3.7
      VpcConfig:
        SecurityGroupIds:
          - !Ref FunctionSecurityGroup
        SubnetIds:
          - !Ref PrivateSubnet2
      Events:
        # APIRoot:
        #   Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
        #   Properties:
        #     Path: /
        #     Method: ANY
        #     RestApiId: !Ref FrabPrivateApiGW
        # API:
        #   Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
        #   Properties:
        #     Path: /{proxy+}
        #     Method: ANY
        #     RestApiId: !Ref FrabPrivateApiGW
        Api:
          Type: Api
          Properties:
            Path: /drivers/{driverId}/distance
            Method: put
            RestApiId: !Ref FrabPrivateApiGW
      Environment:
        Variables:
          DEFAULT_REGION: !Ref DefaultRegion
          SEARCH_RADIUS_UNIT: !Ref SearchRadiusUnits
          RIDERS_TABLE: !Ref RidersTable
          DRIVERS_TABLE: !Ref DriversTable
          RIDES_TABLE: !Ref RidersTable
          ELASTICACHE_HOST: !GetAtt ["ReplicationGroup", "PrimaryEndPoint.Address"]
          ELASTICACHE_PORT: !GetAtt ["ReplicationGroup", "PrimaryEndPoint.Port"]
          SEARCH_RADIUS_VALUE: !Ref SearchRadiusValue
          SEARCH_RADIUS_UNIT: !Ref SearchRadiusUnits
      Policies:
        - AWSLambdaVPCAccessExecutionRole
  PrivateEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument: '{
      "Version":"2012-10-17",
      "Statement": [
        {
            "Action": "*",
            "Effect": "Allow",
            "Resource": "*",
            "Principal": "*"
        }
      ]}'
      VpcId: !Ref mainVPC
      SubnetIds:
        - !Ref PublicSubnet1
      ServiceName: !Sub "com.amazonaws.${AWS::Region}.execute-api"
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - !Ref PrivateLambdaSecurityGroup
      # Tags:
      #   -
      #     Key: "Name"
      #     Value: "frab-private-endpoint"
  Endpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument: '{
       "Version":"2012-10-17",
       "Statement": [
        {
            "Action": "*",
            "Effect": "Allow",
            "Resource": "*",
            "Principal": "*"
        }
      ]}'
      RouteTableIds:
        - !Ref PublicRouteTable
        - !Ref PrivateRouteTable
      ServiceName: !Sub com.amazonaws.${AWS::Region}.dynamodb
      VpcId: !Ref mainVPC
      # Tags:
      #   -
      #     Key: "Name"
      #     Value: "frab-gateway-endpoint"
  #Private API Gateway
  FrabPrivateApiGW:
    Type: AWS::Serverless::Api
    Properties:
      StageName: Prod
      EndpointConfiguration: PRIVATE
      Variables:
        ServerlessExpressLambdaFunctionName: !Ref DistanceDriverRiderFunction
      DefinitionBody:
        swagger: 2.0
        info:
          title: FrabPrivateApiGW
        basePath: /Prod
        schemes:
          - https
        x-amazon-apigateway-policy:
          Version: "2012-10-17"
          Statement:
            -
              Effect: "Allow"
              Principal: "*"
              Action:
                - "execute-api:Invoke"
              Resource: "execute-api:/*"
              Condition:
                StringEquals:
                  aws:sourceVpce: !Ref PrivateEndpoint
        paths:
          /:
            x-amazon-apigateway-any-method:
              produces:
              - application/json
              x-amazon-apigateway-integration:
                responses:
                  default:
                    statusCode: 200
                uri: !Join [ ":", [ !Sub "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/arn:aws:lambda:${AWS::Region}:${AWS::AccountId}", "function:${stageVariables.ServerlessExpressLambdaFunctionName}/invocations"] ]
                passthroughBehavior: when_no_match
                httpMethod: GET
                type: aws_proxy
          /drivers/{driverId}/distance:
            x-amazon-apigateway-any-method:
              produces:
                - application/json
              parameters:
                - name: driverId
                  in: path
                  required: true
                  type: string
              x-amazon-apigateway-integration:
                uri: !Join [ ":", [ !Sub "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/arn:aws:lambda:${AWS::Region}:${AWS::AccountId}", "function:${stageVariables.ServerlessExpressLambdaFunctionName}/invocations"] ]
                httpMethod: PUT
                type: aws_proxy
          #   /drivers/{driverId}/distance
  #
  # VPC
  #
  mainVPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: !Ref "VpcCidrBlock"
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      Tags:
        -
          Key: "Name"
          Value: !Ref VpcName
  # PublicRouteToIGW:
  #   Type: "AWS::EC2::Route"
  #   Properties:
  #     DestinationCidrBlock: "0.0.0.0/0"
  #     RouteTableId: !Ref PublicRouteTable
  #     # GatewayId: !Ref IGW
  PrivateSubnet1:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: !Ref PrivateSubnet1CIDR
      VpcId: !Ref mainVPC
      Tags:
        -
          Key: "Name"
          Value: !Sub
            - "${VPC_NAME} Private Subnet 1"
            - VPC_NAME: !Ref VpcName
  PrivateSubnet2:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: !Ref PrivateSubnet2CIDR
      VpcId: !Ref mainVPC
      Tags: 
        - 
          Key: "Name"
          Value: !Sub
            - "${VPC_NAME} Private Subnet 2"
            - VPC_NAME: !Ref VpcName
  PublicSubnet1:
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [0, !GetAZs ""]
      CidrBlock: !Ref PublicSubnet1CIDR
      VpcId: !Ref mainVPC
      Tags:
        -
          Key: "Name"
          Value: !Sub
            - "${VPC_NAME} Public Subnet 1"
            - VPC_NAME: !Ref VpcName
  ## private subnet 2: 10.100.128.0/18
  ## public subnet 2: 10.100.192.0/18
  PrivateRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref mainVPC
      Tags:
        -
          Key: "Name"
          Value: "frab-api-private-routetable"
  # PrivateRouteTable1:
  #   Type: "AWS::EC2::RouteTable"
  #   Properties:
  #     VpcId: !Ref mainVPC
  #     Tags:
  #       -
  #         Key: "Name"
  #         Value: "frab-api-private-routetable1"
  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref mainVPC
      Tags:
        -
          Key: "Name"
          Value: "frab-api-public-routetable"
  IGW:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        -
          Key: "Name"
          Value: "frab-api-igw"
  IgwAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    DependsOn:
      - "IGW"
    Properties:
      VpcId: !Ref mainVPC
      InternetGatewayId: !Ref IGW
  # NatEIP:
  #   Type: "AWS::EC2::EIP"
  #   Properties:
  #     Domain: "vpc"
  # NatGateway:
  #   Type: "AWS::EC2::NatGateway"
  #   DependsOn:
  #     - IGW
  #   Properties:
  #     AllocationId: !GetAtt NatEIP.AllocationId
  #     SubnetId: !Ref PublicSubnet1
  BastionHost:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: "ami-0615132a0f36d24f4"
      InstanceType: "t2.micro"
      SourceDestCheck: false
      Tenancy: "default"
      KeyName: "neildaryl-keypair"
      UserData:
        'Fn::Base64': !Sub |
          sudo yum install gcc -y
          sudo yum install tcl -y
          wget http://download.redis.io/redis-stable.tar.gz
          tar xvzf redis-stable.tar.gz
          cd redis-stable
          make
          sudo cp src/redis-server /usr/local/bin/
          sudo cp src/redis-cli /usr/local/bin/
      NetworkInterfaces:
        - GroupSet:
            - !Ref BastionSecurityGroup
          AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref PublicSubnet1
      Tags:
        -
          Key: "Name"
          Value: "frab-api-bastion-host"
  BastionSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "frab-api - Bastion Security Group"
      VpcId: !Ref mainVPC
      SecurityGroupIngress:
        -
          IpProtocol: "tcp"
          CidrIp: 0.0.0.0/0
          FromPort: 22
          ToPort: 22
  PrivateRouteToNatGateway: #temp
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      RouteTableId: !Ref PrivateRouteTable
      InstanceId: !Ref BastionHost
      # NatGatewayId: !Ref NatGateway
  PublicRouteToIGW: #temp
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: "0.0.0.0/0"
      RouteTableId: !Ref PublicRouteTable
      GatewayId: !Ref IGW
  PrivateSubnet1RouteAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet1
  PrivateSubnet2RouteAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet2
  PublicSubnet1RouteAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1
  FunctionSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "frab-api - Lambda Function Security Group"
      VpcId: !Ref mainVPC
  #
  # ElastiCache
  #
  # ECCluster:
  #   Type: "AWS::ElastiCache::CacheCluster"
  #   Properties:
  #     AZMode: !Ref RedisAZMode
  #     Engine: "redis"
  #     CacheNodeType: !Ref ElastiCacheClusterType
  #     NumCacheNodes: !Ref ElastiCacheNodes
  #     VpcSecurityGroupIds:
  #       - !GetAtt ECSecurityGroup.GroupId
  #     CacheSubnetGroupName: !Ref ECSubnetGroup
  ReplicationGroup:
    Type: 'AWS::ElastiCache::ReplicationGroup'
    Properties:
      AutomaticFailoverEnabled: !Ref MultiAZSupport
      MultiAZEnabled: !Ref MultiAZEnabled
      CacheNodeType: !Ref ElastiCacheClusterType
      CacheSubnetGroupName: !Ref ECSubnetGroup
      Engine: "redis"
      NumCacheClusters: !Ref ElastiCacheNodes #2
      Port: 6379
      ReplicationGroupDescription: 'frab-api replication group'
      SecurityGroupIds:
        - !GetAtt ECSecurityGroup.GroupId
  ECSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "frab-api ElastiCache Security Group"
      VpcId: !Ref mainVPC
      SecurityGroupIngress:
        -
          IpProtocol: "tcp"
          FromPort: 6379
          ToPort: 6379
          SourceSecurityGroupId: !Ref FunctionSecurityGroup
        -
          IpProtocol: "tcp"
          FromPort: 6379
          ToPort: 6379
          SourceSecurityGroupId: !Ref BastionSecurityGroup
  ECSubnetGroup:
    Type: "AWS::ElastiCache::SubnetGroup"
    Properties:
      Description: "frab-api - ElastiCache Subnet Group"
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
  TokenAuthorizerFunction:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: lambda_authorizer/
      Handler: app.handler
      Runtime: nodejs10.x
  FrabApi:
    Type: AWS::Serverless::Api
    Properties:
      StageName: Prod
      Cors: "'*'"
      Auth:
        DefaultAuthorizer: TokenAuthorizerFunction
        Authorizers:
          TokenAuthorizerFunction:
            FunctionArn: !GetAtt TokenAuthorizerFunction.Arn
          # Identity:
          #   Header: Authorization
      GatewayResponses:
        UNAUTHORIZED:
          StatusCode: 401
          ResponseParameters:
            Headers:
              Access-Control-Expose-Headers: "'WWW-Authenticate'"
              Access-Control-Allow-Origin: "'*'"
              WWW-Authenticate: >-
                'Authorization'
  GetAcceptableRidesFunction:
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: get_acceptable_rides/
      Handler: app.lambda_handler
      Runtime: python3.7
      VpcConfig:
        SecurityGroupIds:
          - !Ref FunctionSecurityGroup
        SubnetIds:
          - !Ref PublicSubnet1
      Events:
        FrabApi:
          Type: Api
          Properties:
            Path: /drivers/{driverId}/rides/acceptable
            Method: get
            RestApiId: !Ref FrabApi
      Environment: 
        Variables:
          DEFAULT_REGION: !Ref DefaultRegion
          DRIVERS_TABLE: !Select [1, !Split ['/', !GetAtt DriversTable.Arn]]
          ELASTICACHE_HOST: !GetAtt ["ReplicationGroup", "PrimaryEndPoint.Address"]
          ELASTICACHE_PORT: !GetAtt ["ReplicationGroup", "PrimaryEndPoint.Port"]
          RIDES_ACCEPTABLE_COUNT: !Ref RidesAcceptableCount
          SEARCH_RADIUS_VALUE: !Ref SearchRadiusValue
          SEARCH_RADIUS_UNIT: !Ref SearchRadiusUnits
      Policies:
        - AWSLambdaVPCAccessExecutionRole
        - DynamoDBCrudPolicy:
            TableName: !Ref DriversTable
  GetRideStatusFunction: 
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: get_ride_status/
      Handler: app.lambda_handler
      Runtime: python3.7
      VpcConfig:
        SecurityGroupIds:
          - !Ref FunctionSecurityGroup
        SubnetIds:
          - !Ref PublicSubnet1
      Events: 
        FrabApi:
          Type: Api
          Properties:
            Path: /rides/{rideId}
            Method: get
            RestApiId: !Ref FrabApi
      Environment: 
        Variables:
          DEFAULT_REGION: !Ref DefaultRegion
          RIDES_TABLE: !Select [1, !Split ['/', !GetAtt RidesTable.Arn]]
          ELASTICACHE_HOST: !GetAtt ["ReplicationGroup", "PrimaryEndPoint.Address"]
          ELASTICACHE_PORT: !GetAtt ["ReplicationGroup", "PrimaryEndPoint.Port"]
          RIDES_TTL: !Ref RedisRidesTTL
      Policies:
        - AWSLambdaVPCAccessExecutionRole
        - DynamoDBCrudPolicy:
            TableName: !Ref RidesTable
  BookRideFunction:
    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
    Properties:
      CodeUri: book_ride/
      Handler: app.lambda_handler
      Runtime: python3.7
      VpcConfig:
        SecurityGroupIds:
          - !Ref FunctionSecurityGroup
        SubnetIds:
          - !Ref PublicSubnet1
      # Timeout: 6
      Events:
        FrabApi:
          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
          Properties:
            Path: /rides
            Method: post
            RestApiId: !Ref FrabApi
      Policies:
        - AWSLambdaVPCAccessExecutionRole
        - DynamoDBCrudPolicy:
            TableName: !Ref RidesTable
        - DynamoDBCrudPolicy:
            TableName: !Ref RidersTable
      Environment: 
        Variables:
            DEFAULT_REGION: !Ref DefaultRegion
            RIDES_TTL: !Ref RedisRidesTTL
            RIDES_TABLE: !Select [1, !Split ['/', !GetAtt RidesTable.Arn]]
            RIDERS_TABLE: !Select [1, !Split ['/', !GetAtt RidersTable.Arn]]
            ELASTICACHE_HOST: !GetAtt ["ReplicationGroup", "PrimaryEndPoint.Address"]
            ELASTICACHE_PORT: !GetAtt ["ReplicationGroup", "PrimaryEndPoint.Port"]
  AcceptRideRequestFunction: 
    Type: AWS::Serverless::Function
    Properties:
      CodeUri: accept_ride_request/
      Handler: app.lambda_handler
      Runtime: python3.7
      VpcConfig:
        SecurityGroupIds:
          - !Ref FunctionSecurityGroup
        SubnetIds:
          - !Ref PublicSubnet1      
      Events: 
        FrabApi:
          Type: Api
          Properties:
            Path: /drivers/{driverId}/rides/{rideId}/accept
            Method: put
            RestApiId: !Ref FrabApi
      Environment: 
        Variables:
            DEFAULT_REGION: !Ref DefaultRegion
            RIDES_TABLE: !Select [1, !Split ['/', !GetAtt RidesTable.Arn]]
            DRIVERS_TABLE: !Select [1, !Split ['/', !GetAtt DriversTable.Arn]]
            ELASTICACHE_HOST: !GetAtt ["ReplicationGroup", "PrimaryEndPoint.Address"]
            ELASTICACHE_PORT: !GetAtt ["ReplicationGroup", "PrimaryEndPoint.Port"]
      Policies:
        - AWSLambdaVPCAccessExecutionRole
        - DynamoDBCrudPolicy:
            TableName: !Ref RidesTable
        - DynamoDBCrudPolicy:
            TableName: !Ref DriversTable
  UpdateDriversLocationFunction:
    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
    Properties:
      CodeUri: drivers_location/
      Handler: app.lambda_handler
      Runtime: python3.7
      Timeout: 6
      VpcConfig:
        SecurityGroupIds:
          - !Ref FunctionSecurityGroup
        SubnetIds:
          - !Ref PublicSubnet1
      Events:
        Location:
          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
          Properties:
            Path: /drivers/{driverId}/locations
            Method: put
            RestApiId: !Ref FrabApi
      Environment:
        Variables:
          DRIVERS_TABLE: !Select [1, !Split ['/', !GetAtt DriversTable.Arn]]
          RIDES_TABLE: !Select [1, !Split ['/', !GetAtt RidesTable.Arn]]
          RIDERS_TABLE: !Select [1, !Split ['/', !GetAtt RidersTable.Arn]]
          ELASTICACHE_HOST: !GetAtt ["ReplicationGroup", "PrimaryEndPoint.Address"]
          ELASTICACHE_PORT: !GetAtt ["ReplicationGroup", "PrimaryEndPoint.Port"]
      Policies:
        - AWSLambdaVPCAccessExecutionRole
        - DynamoDBCrudPolicy:
            TableName: !Ref DriversTable     
        - DynamoDBCrudPolicy:
            TableName: !Ref RidesTable
        - DynamoDBCrudPolicy:
            TableName: !Ref RidersTable
  UpdateRidersLocationFunction:
    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
    Properties:
      CodeUri: update_riders_location/
      Handler: app.lambda_handler
      Runtime: python3.7
      Timeout: 6
      VpcConfig:
        SecurityGroupIds:
          - !Ref FunctionSecurityGroup
        SubnetIds:
          - !Ref PublicSubnet1
      Events:
        Location:
          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
          Properties:
            Path: /riders/{riderId}/locations
            Method: put
            RestApiId: !Ref FrabApi
      Environment:
        Variables:
          DRIVERS_TABLE: !Select [1, !Split ['/', !GetAtt DriversTable.Arn]]
          RIDES_TABLE: !Select [1, !Split ['/', !GetAtt RidesTable.Arn]]
          RIDERS_TABLE: !Select [1, !Split ['/', !GetAtt RidersTable.Arn]]
          ELASTICACHE_HOST: !GetAtt ["ReplicationGroup", "PrimaryEndPoint.Address"]
          ELASTICACHE_PORT: !GetAtt ["ReplicationGroup", "PrimaryEndPoint.Port"]
      Policies:
        - DynamoDBCrudPolicy:
            TableName: !Ref RidersTable
        - DynamoDBCrudPolicy:
            TableName: !Ref RidesTable
        - DynamoDBCrudPolicy:
            TableName: !Ref DriversTable
        - AWSLambdaVPCAccessExecutionRole
  GetRiderLocationFunction:
    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
    Properties:
      CodeUri: get_riders_location/
      Handler: app.lambda_handler
      Runtime: python3.7
      Timeout: 6
      VpcConfig:
        SecurityGroupIds:
          - !Ref FunctionSecurityGroup
        SubnetIds:
          - !Ref PublicSubnet1
      Events:
        Location:
          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
          Properties:
            Path: /riders/{riderId}
            Method: get
            RestApiId: !Ref FrabApi
      Environment:
        Variables:
          DRIVERS_TABLE: !Select [1, !Split ['/', !GetAtt DriversTable.Arn]]
          RIDERS_TABLE: !Select [1, !Split ['/', !GetAtt RidersTable.Arn]]
          RIDES_TABLE: !Select [1, !Split ['/', !GetAtt RidesTable.Arn]]
          ELASTICACHE_HOST: !GetAtt ["ReplicationGroup", "PrimaryEndPoint.Address"]
          ELASTICACHE_PORT: !GetAtt ["ReplicationGroup", "PrimaryEndPoint.Port"]
      Policies:
        - DynamoDBReadPolicy:
            TableName: !Ref RidersTable
        - DynamoDBCrudPolicy:
            TableName: !Ref DriversTable
        - DynamoDBCrudPolicy:
            TableName: !Ref RidesTable
        - AWSLambdaVPCAccessExecutionRole
  RidesTable:
    Type: AWS::DynamoDB::Table
    Properties: 
      AttributeDefinitions: 
        - AttributeName: ride_id  
          AttributeType: S
        # - AttributeName: timestamp
        #   AttributeType: S
      KeySchema: 
        - AttributeName: ride_id
          KeyType: HASH
        # - AttributeName: timestamp
        #   KeyType: RANGE
      ProvisionedThroughput: 
        ReadCapacityUnits: 5
        WriteCapacityUnits: 5
  # LocationsTable:
  #   Type: AWS::DynamoDB::Table
  #   Properties:
  #     AttributeDefinitions:
  #       - AttributeName: loc_id
  #         AttributeType: S
  #     KeySchema:
  #       - AttributeName: loc_id
  #         KeyType: HASH
  #     ProvisionedThroughput:
  #       ReadCapacityUnits: 5
  #       WriteCapacityUnits: 5
  RidersTable:
    Type: AWS::DynamoDB::Table
    Properties: 
      AttributeDefinitions: 
        - AttributeName: rider_id  
          AttributeType: S
        # - AttributeName: last_location_timestamp
        #   AttributeType: S
      KeySchema: 
        - AttributeName: rider_id
          KeyType: HASH
        # - AttributeName: last_location_timestamp
        #   KeyType: RANGE
      ProvisionedThroughput: 
        ReadCapacityUnits: 5
        WriteCapacityUnits: 5
  DriversTable:
    Type: AWS::DynamoDB::Table
    Properties: 
      AttributeDefinitions: 
        - AttributeName: driver_id  
          AttributeType: S
      KeySchema: 
        - AttributeName: driver_id
          KeyType: HASH
      ProvisionedThroughput: 
        ReadCapacityUnits: 5
        WriteCapacityUnits: 5  
Outputs:
  # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
  # Find out more about other implicit resources you can reference within SAM
  # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
  FrabApi:
    Description: "API Gateway endpoint URL for Prod stage for Book Ride function"
    Value: !Sub "https://${FrabApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/rides/"
  FrabPrivateApiGW:
    Description: "Private Gateway endpoint URL for Prod stage"
    Value: !Sub "https://${FrabPrivateApiGW}.execute-api.${AWS::Region}.amazonaws.com/Prod/"
  # BookRideFunction:
  #   Description: "BookRideFunction Lambda Function ARN"
  #   Value: !GetAtt BookRideFunction.Arn
  # BookRideFunctionIamRole:
  #   Description: "Implicit IAM Role created for Hello World function"
  #   Value: !GetAtt BookRideFunctionRole.Arn
  CacheEndpoint:
    Description: "ElastiCache Endpoint"
    Value: !Join ["", ['redis://', !GetAtt ["ReplicationGroup", "PrimaryEndPoint.Address"],":", !GetAtt ["ReplicationGroup", "PrimaryEndPoint.Port"]]]
  # DriversTable:
  #   Description: "DriversTable Table Arn"
  #   # Value: !Select [1, !Split ['/', !.GetAtt DriversTable.Arn]]
  #   Value: !GetAtt DriversTable.Arn
  # RidesTable:
  #   Description: "RidesTable Table Arn"
  #   Value: !GetAtt RidesTable.Arn
  # RidersTable:
  #   Description: "RidersTable Table Arn"
  #   Value: !GetAtt RidersTable.Arn
